[dyad] Created Add Transaction page and added its route - wrote 4 file(s)

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -24,5 +24,6 @@
   "current_balance": "الرصيد الحالي",
   "monthly_summary": "ملخص شهري",
   "top_spending_categories": "أعلى فئات الإنفاق",
-  "add_new_transaction": "إضافة معاملة جديدة"
+  "add_new_transaction": "إضافة معاملة جديدة",
+  "pick_a_date": "اختر تاريخًا"
 }
