[dyad] Updated dashboard with dynamic transaction data - wrote 3 file(s)

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -61,5 +61,6 @@
   "goal_save_error_fields": "الرجاء تعبئة اسم الهدف والمبلغ المستهدف الصحيح.",
   "your_goals": "أهدافك",
   "target": "المستهدف",
-  "current": "الحالي"
+  "current": "الحالي",
+  "balance_info": "بناءً على معاملاتك المسجلة."
 }
