[dyad] Added a new budgeting feature with persistence and navigation - wrote 8 file(s)

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -5,6 +5,7 @@
   "transactions": "المعاملات",
   "analytics": "التحليلات",
   "goals": "الأهداف",
+  "budgets": "الميزانيات",
   "settings": "الإعدادات",
   "add_transaction": "إضافة معاملة",
   "language": "اللغة",
@@ -79,5 +80,23 @@
   "goal_delete_confirm": "هل أنت متأكد أنك تريد حذف هذا الهدف؟ لا يمكن التراجع عن هذا الإجراء.",
   "update_current_amount": "تحديث المبلغ الحالي",
   "invalid_amount": "الرجاء إدخال مبلغ صالح.",
-  "goal_current_amount_updated_success": "تم تحديث المبلغ الحالي للهدف بنجاح!"
+  "goal_current_amount_updated_success": "تم تحديث المبلغ الحالي للهدف بنجاح!",
+  "budgets_page_description": "حدد وتتبع حدود إنفاقك لفئات مختلفة.",
+  "add_new_budget": "إضافة ميزانية جديدة",
+  "budget_name": "اسم الميزانية",
+  "budget_name_placeholder": "مثال: ميزانية الطعام الشهرية",
+  "budget_amount": "مبلغ الميزانية",
+  "month_year": "الشهر/السنة (YYYY-MM)",
+  "add_budget": "إضافة ميزانية",
+  "budget_saved_success": "تم حفظ الميزانية بنجاح!",
+  "budget_save_error_fields": "الرجاء تعبئة جميع الحقول المطلوبة (اسم الميزانية، الفئة، المبلغ، الشهر/السنة).",
+  "your_budgets": "ميزانياتك",
+  "no_budgets_yet": "لم يتم تحديد أي ميزانيات بعد. ابدأ في إدارة إنفاقك!",
+  "budgeted": "الميزانية",
+  "spent": "المنفق",
+  "over_budget_warning": "لقد تجاوزت الميزانية بمقدار ${amount}!",
+  "edit_budget": "تعديل الميزانية",
+  "budget_updated_success": "تم تحديث الميزانية بنجاح!",
+  "budget_deleted_success": "تم حذف الميزانية بنجاح!",
+  "budget_delete_confirm": "هل أنت متأكد أنك تريد حذف هذه الميزانية؟ لا يمكن التراجع عن هذا الإجراء."
 }
