--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -5,6 +5,7 @@
   "transactions": "Transactions",
   "analytics": "Analytics",
   "goals": "Goals",
+  "budgets": "Budgets",
   "settings": "Settings",
   "add_transaction": "Add Transaction",
   "language": "Language",
@@ -79,5 +80,23 @@
   "goal_delete_confirm": "Are you sure you want to delete this goal? This action cannot be undone.",
   "update_current_amount": "Update Current Amount",
   "invalid_amount": "Please enter a valid amount.",
-  "goal_current_amount_updated_success": "Goal current amount updated successfully!"
+  "goal_current_amount_updated_success": "Goal current amount updated successfully!",
+  "budgets_page_description": "Set and track your spending limits for different categories.",
+  "add_new_budget": "Add New Budget",
+  "budget_name": "Budget Name",
+  "budget_name_placeholder": "e.g., Monthly Food Budget",
+  "budget_amount": "Budget Amount",
+  "month_year": "Month/Year (YYYY-MM)",
+  "add_budget": "Add Budget",
+  "budget_saved_success": "Budget saved successfully!",
+  "budget_save_error_fields": "Please fill in all required fields (Budget Name, Category, Amount, Month/Year).",
+  "your_budgets": "Your Budgets",
+  "no_budgets_yet": "No budgets set yet. Start managing your spending!",
+  "budgeted": "Budgeted",
+  "spent": "Spent",
+  "over_budget_warning": "You are over budget by ${amount}!",
+  "edit_budget": "Edit Budget",
+  "budget_updated_success": "Budget updated successfully!",
+  "budget_deleted_success": "Budget deleted successfully!",
+  "budget_delete_confirm": "Are you sure you want to delete this budget? This action cannot be undone."
 }
