--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -102,5 +102,12 @@
   "toggle_theme": "Toggle theme",
   "light_theme": "Light",
   "dark_theme": "Dark",
-  "system_theme": "System"
+  "system_theme": "System",
+  "filter_by_category": "Filter by Category",
+  "all_categories": "All Categories",
+  "filter_by_type": "Filter by Type",
+  "all_types": "All Types",
+  "pick_a_date_range": "Pick a date range",
+  "clear_filters": "Clear Filters",
+  "no_transactions_found": "No transactions found matching your criteria."
 }
