--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -112,5 +112,10 @@
   "no_transactions_found": "No transactions found matching your criteria.",
   "recent_transactions": "Recent Transactions",
   "view_all": "View All",
-  "no_recent_transactions": "No recent transactions to display."
+  "no_recent_transactions": "No recent transactions to display.",
+  "financial_summary": "Financial Summary",
+  "total_income": "Total Income",
+  "total_expenses": "Total Expenses",
+  "net_savings": "Net Savings",
+  "summary_for_month": "Summary for {{month}}"
 }
