[dyad] wrote 24 file(s) + extra files edited outside of Dyad

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -6,6 +6,7 @@
   "analytics": "التحليلات",
   "goals": "الأهداف",
   "budgets": "الميزانيات",
+  "income_tracking": "الدخل",
   "settings": "الإعدادات",
   "add_transaction": "إضافة معاملة",
   "language": "اللغة",
@@ -94,7 +95,7 @@
   "no_budgets_yet": "لم يتم تحديد أي ميزانيات بعد. ابدأ في إدارة إنفاقك!",
   "budgeted": "الميزانية",
   "spent": "المنفق",
-  "over_budget_warning": "لقد تجاوزت الميزانية بمقدار ${amount}!",
+  "over_budget_warning": "لقد تجاوزت الميزانية بمقدار {{amount}}!",
   "edit_budget": "تعديل الميزانية",
   "budget_updated_success": "تم تحديث الميزانية بنجاح!",
   "budget_deleted_success": "تم حذف الميزانية بنجاح!",
@@ -130,5 +131,30 @@
   "recommendation_goal_almost_reached": "أنت قريب جدًا من تحقيق هدفك '{{goalName}}'! استمر في العمل الرائع، خط النهاية في الأفق!",
   "recommendation_goal_good_progress": "أنت تحرز تقدمًا كبيرًا نحو '{{goalName}}'! تفانيك يؤتي ثماره.",
   "recommendation_goal_start_strong": "بدء هدف جديد أمر مثير! استمر في المساهمة في '{{goalName}}' لبناء الزخم.",
-  "recommendation_general_positive": "أنت تقوم بعمل رائع في إدارة أموالك! استمر في العمل الجيد."
+  "recommendation_general_positive": "أنت تقوم بعمل رائع في إدارة أموالك! استمر في العمل الجيد.",
+  "income_page_description": "تتبع وإدارة جميع مصادر دخلك.",
+  "add_new_income": "إضافة دخل جديد",
+  "add_income": "إضافة دخل",
+  "income_saved_success": "تم حفظ الدخل بنجاح!",
+  "income_save_error_fields": "الرجاء تعبئة جميع الحقول المطلوبة (المبلغ، النوع، التاريخ).",
+  "your_income_history": "سجل دخلك",
+  "no_income_yet": "لم يتم تسجيل أي دخل بعد. أضف أول دخل لك!",
+  "income_delete_confirm": "هل أنت متأكد أنك تريد حذف إدخال الدخل هذا؟ لا يمكن التراجع عن هذا الإجراء.",
+  "income_deleted_success": "تم حذف إدخال الدخل بنجاح!",
+  "edit_income": "تعديل الدخل",
+  "income_updated_success": "تم تحديث إدخال الدخل بنجاح!",
+  "currency_locale": "ar-DZ",
+  "add_transaction_page_description": "سجل دخلك ونفقاتك لتتبع أموالك.",
+  "transaction_details": "تفاصيل المعاملة",
+  "category_placeholder_transaction": "مثال: طعام، راتب",
+  "note_placeholder_transaction": "مثال: عشاء مع الأصدقاء",
+  "location_placeholder_transaction": "مثال: سوبر ماركت، مقهى",
+  "remaining": "المتبقي",
+  "monthly_budget_overview": "نظرة عامة على الميزانية الشهرية",
+  "no_budgets_for_current_month": "لم يتم تعيين ميزانيات للشهر الحالي. أنشئ واحدة لبدء التتبع!",
+  "savings_goals_progress": "تقدم أهداف الادخار",
+  "no_active_goals": "لا توجد أهداف ادخار نشطة. حدد هدفًا جديدًا لبدء الادخار!",
+  "set_new_goal": "حدد هدفًا جديدًا",
+  "view_all_goals": "عرض جميع الأهداف",
+  "category_placeholder_budget": "مثال: بقالة، مواصلات"
 }
