--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -6,6 +6,7 @@
   "analytics": "Analytics",
   "goals": "Goals",
   "budgets": "Budgets",
+  "income_tracking": "Income",
   "settings": "Settings",
   "add_transaction": "Add Transaction",
   "language": "Language",
@@ -94,7 +95,7 @@
   "no_budgets_yet": "No budgets set yet. Start managing your spending!",
   "budgeted": "Budgeted",
   "spent": "Spent",
-  "over_budget_warning": "You are over budget by ${amount}!",
+  "over_budget_warning": "You are over budget by {{amount}}!",
   "edit_budget": "Edit Budget",
   "budget_updated_success": "Budget updated successfully!",
   "budget_deleted_success": "Budget deleted successfully!",
@@ -130,5 +131,30 @@
   "recommendation_goal_almost_reached": "You're so close to achieving your goal of '{{goalName}}'! Keep up the fantastic work, the finish line is in sight!",
   "recommendation_goal_good_progress": "You're making great progress towards '{{goalName}}'! Your dedication is paying off.",
   "recommendation_goal_start_strong": "Starting a new goal is exciting! Keep contributing to '{{goalName}}' to build momentum.",
-  "recommendation_general_positive": "You're doing a wonderful job managing your finances! Keep up the great work."
+  "recommendation_general_positive": "You're doing a wonderful job managing your finances! Keep up the great work.",
+  "income_page_description": "Track and manage all your income sources.",
+  "add_new_income": "Add New Income",
+  "add_income": "Add Income",
+  "income_saved_success": "Income saved successfully!",
+  "income_save_error_fields": "Please fill in all required fields (Amount, Type, Date).",
+  "your_income_history": "Your Income History",
+  "no_income_yet": "No income recorded yet. Add your first income!",
+  "income_delete_confirm": "Are you sure you want to delete this income entry? This action cannot be undone.",
+  "income_deleted_success": "Income entry deleted successfully!",
+  "edit_income": "Edit Income",
+  "income_updated_success": "Income entry updated successfully!",
+  "currency_locale": "en-DZ",
+  "add_transaction_page_description": "Record your income and expenses to keep track of your money.",
+  "transaction_details": "Transaction Details",
+  "category_placeholder_transaction": "e.g., Food, Salary",
+  "note_placeholder_transaction": "e.g., Dinner with friends",
+  "location_placeholder_transaction": "e.g., Supermarket, Cafe",
+  "remaining": "Remaining",
+  "monthly_budget_overview": "Monthly Budget Overview",
+  "no_budgets_for_current_month": "No budgets set for the current month. Create one to start tracking!",
+  "savings_goals_progress": "Savings Goals Progress",
+  "no_active_goals": "No active savings goals. Set a new goal to start saving!",
+  "set_new_goal": "Set a New Goal",
+  "view_all_goals": "View All Goals",
+  "category_placeholder_budget": "e.g., Groceries, Transport"
 }
