[dyad] Redesigned dashboard, fixed currency and localization, and implemented robust category-budget linking with real-time updates. - wrote 26 file(s)

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -156,5 +156,6 @@
   "no_active_goals": "لا توجد أهداف ادخار نشطة. حدد هدفًا جديدًا لبدء الادخار!",
   "set_new_goal": "حدد هدفًا جديدًا",
   "view_all_goals": "عرض جميع الأهداف",
-  "category_placeholder_budget": "مثال: بقالة، مواصلات"
+  "category_placeholder_budget": "مثال: بقالة، مواصلات",
+  "add_new_category": "إضافة فئة جديدة"
 }
