--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -90,7 +90,7 @@
   "month_year": "Month/Year (YYYY-MM)",
   "add_budget": "Add Budget",
   "budget_saved_success": "Budget saved successfully!",
-  "budget_save_error_fields": "Please fill in all required fields (Budget Name, Category, Amount, Month/Year).",
+  "budget_save_error_fields": "Please fill in all required fields (Category, Amount, Month, Year).",
   "your_budgets": "Your Budgets",
   "no_budgets_yet": "No budgets set yet. Start managing your spending!",
   "budgeted": "Budgeted",
@@ -157,5 +157,33 @@
   "set_new_goal": "Set a New Goal",
   "view_all_goals": "View All Goals",
   "category_placeholder_budget": "e.g., Groceries, Transport",
-  "add_new_category": "Add New Category"
+  "add_new_category": "Add New Category",
+  "error_fetching_categories": "Error fetching categories.",
+  "error_adding_category": "Error adding category.",
+  "error_updating_category": "Error updating category.",
+  "error_deleting_category": "Error deleting category.",
+  "error_not_authenticated": "You must be logged in to perform this action.",
+  "error_fetching_transactions": "Error fetching transactions.",
+  "error_adding_transaction": "Error adding transaction.",
+  "error_updating_transaction": "Error updating transaction.",
+  "error_deleting_transaction": "Error deleting transaction.",
+  "error_fetching_budgets": "Error fetching budgets.",
+  "error_adding_budget": "Error adding budget.",
+  "error_updating_budget": "Error updating budget.",
+  "error_deleting_budget": "Error deleting budget.",
+  "error_fetching_goals": "Error fetching goals.",
+  "error_adding_goal": "Error adding goal.",
+  "error_updating_goal": "Error updating goal.",
+  "error_deleting_goal": "Error deleting goal.",
+  "error_invalid_category": "Invalid category selected or entered.",
+  "category_added_success": "Category added successfully!",
+  "category_updated_success": "Category updated successfully!",
+  "category_deleted_success": "Category deleted successfully!",
+  "unknown_category": "Unknown Category",
+  "month": "Month",
+  "year": "Year",
+  "logout": "Logout",
+  "loading": "Loading",
+  "oops_page_not_found": "Oops! Page not found",
+  "return_to_home": "Return to Home"
 }
