--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -185,5 +185,16 @@
   "logout": "Logout",
   "loading": "Loading",
   "oops_page_not_found": "Oops! Page not found",
-  "return_to_home": "Return to Home"
+  "return_to_home": "Return to Home",
+  "category_management": "Category Management",
+  "category_management_description": "Add, edit, or delete your spending and income categories.",
+  "category_name": "Category Name",
+  "category_name_placeholder": "e.g., Groceries, Salary",
+  "add_category": "Add Category",
+  "your_categories": "Your Categories",
+  "no_categories_yet": "No categories defined yet. Add your first one!",
+  "loading_categories": "Loading categories...",
+  "edit_category": "Edit Category",
+  "category_save_error_fields": "Please provide a category name and type.",
+  "category_delete_confirm": "Are you sure you want to delete this category? All associated transactions and budgets will also be affected."
 }
